# Anomaly_Detection

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.virtual_documents/notebooks/: model_building.ipynb
anomaly_detection/: 1_separate_and_reconstruct_anomalies.py  2_genearte_synthetic_anomalies.py  3_create_features.py  4_supervised_ml.py  5_plot_anomalies.py  6_anomaly_imputer.py  7_model_save.py  ml_evaluation.py
anomaly_detection/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
models/: RF_model.pkl  SVC_model.pkl  rf_model.pkl  svm_model.pkl
notebooks/: model_building.ipynb  test.ipynb
